--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:support-v4:26.1.0'
     endpointsServer project(path: ':backend', configuration: 'endpoints')
     implementation project(":jokesource")
     implementation project(":jokedisplay")
